--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "helmet": "^7.1.0",
     "http-proxy-middleware": "^3.0.0",
     "nodemon": "^3.1.3",
     "ts-node": "^10.9.2",
